# split-image

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py  test1.py
src/split-image/: split4.py
src/split_image/: __init__.py  split.py
