[metadata]
name = split-image-whidev
version = 1.0.0
author = Minas Giannekas
author_email = contact@whidev.com
description = A package that lets you quickly split an image into rows and columns (tiles).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src